tests/ui/suggestions/struct-lit-placeholder-path.stderr
error: placeholder `_` is not allowed for the path in struct literals
  --> $DIR/struct-lit-placeholder-path.rs:9:20
   |
LL |     blah::do_stuff(_ { x: 10 });
   |                    ^ not allowed in struct literals
   |
help: replace it with the correct type
   |
LL -     blah::do_stuff(_ { x: 10 });
LL +     blah::do_stuff(/* Type */ { x: 10 });
   |

error: placeholder `_` is not allowed for the path in struct literals
  --> $DIR/struct-lit-placeholder-path.rs:17:20
   |
LL |     blah::do_stuff(_ { x: 10 });
   |                    ^ not allowed in struct literals
   |
help: replace it with the correct type
   |
LL -     blah::do_stuff(_ { x: 10 });
LL +     blah::do_stuff(/* Type */ { x: 10 });
   |

error: aborting due to 2 previous errors

